Fixed a security issue with injection of html. All elements are now built in javascript instead of injecting innerHTML.

--- a/dev/html/tooltips/ability.html
+++ b/dev/html/tooltips/ability.html
@@ -6,12 +6,12 @@
   <div class="abilityName" linked-text="[[dname]]"></div>
   <br clear="left" />
   <div class="abilityHR1"></div>
-  <div class="abilityTarget" linked-text="[[affects]]"></div>
+  <div class="abilityTarget" linked-html="[[affects]]"></div>
   <div class="abilityHR2"></div>
-  <div class="abilityDesc" linked-text="[[desc]]"></div>
+  <div class="abilityDesc" linked-html="[[desc]]"></div>
   <div class="abilityNotes" linked-text="[[notes]]"></div>
-  <div class="abilityDmg" linked-text="[[dmg]]"></div>
-  <div class="abilityAttrib" linked-text="[[attrib]]"></div>
-  <div class="abilityCMB" linked-text="[[cmb]]"></div>
+  <div class="abilityDmg" linked-html="[[dmg]]"></div>
+  <div class="abilityAttrib" linked-html="[[attrib]]"></div>
+  <div class="abilityCMB" linked-html="[[cmb]]"></div>
   <div class="lore" linked-text="[[lore]]"></div>
 </div>
