--- a/dev/html/tooltips/item.html
+++ b/dev/html/tooltips/item.html
@@ -8,8 +8,8 @@
   </div>
   <div class="goldCost" linked-text="[[cost]]"></div>
   <br clear="left"/>
-  <div class="description" linked-text="[[desc]]"></div>
-  <div class="attribs" linked-text="[[attrib]]"></div>
+  <div class="description" linked-html="[[desc]]"></div>
+  <div class="attribs" linked-html="[[attrib]]"></div>
   <div class="cooldownMana">
     <img alt="Cooldown" title="Cooldown" class="cooldownImg" src="https://cdn.steamstatic.com/apps/dota2/images/tooltips/cooldown.png" width="22" height="22" border="0"/>
     <span linked-text="[[cd]]"></span>
